# fsi-aml-fraud-detection

./: .drone.yml  .gitignore  AML-KYC-Implementation-Log.md  AML-MIGRATION-PLAN.md  CHANGELOG.md  CLAUDE.md  Data Structure and Index.md  Dockerfile.aml-backend  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend-backend  ENHANCED_ENTITY_RESOLUTION_PLAN.md  FRONTEND_IMPLEMENTATION_PLAN.md  FRONTEND_NETWORK_STATISTICS_IMPLEMENTATION_PLAN.md  HYBRID_SEARCH_RANKFUSION_MIGRATION_PLAN.md  LICENSE  NETWORK_ANALYSIS_COMPREHENSIVE_INVESTIGATION.md  NETWORK_ANALYSIS_DETAILED_INVESTIGATION.md  README.md  Remaining Structure.md  ThreatSight360-Implementation.md  docker-compose.yml  makefile  relationship.md  relationships - network plan.md  setup-drone-secrets.sh
aml-backend/: .env.example  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  HYBRID_SEARCH_SCORE_CALCULATION_INSIGHTS.md  README.md  debug_bidirectional.py  debug_filtering.py  debug_network_data.py  dependencies.py  main.py  pyproject.toml  test_atlas_fixed.py  test_atlas_search.py  test_bidirectional_fix.py  test_bidirectional_frontend.py  test_embedding_generation.py  test_enhanced_models.py  test_entity_search_api.py  test_entity_search_service.py  test_network_analysis.py  test_network_api.py  test_network_endpoint.py  test_network_new_schema.py  test_phase2_chunk1.py  test_phase2_chunk2.py
aml-backend/bedrock/: client.py  embeddings.py
aml-backend/db/: mongo_db.py
aml-backend/models/: __init__.py  entity.py  entity_enhanced.py  entity_flexible.py  entity_resolution.py  faceted_search.py  legacy_compatibility.py  network.py  relationship.py  unified_search.py  vector_search.py
aml-backend/reference/: entity_resolution_implementation.md  mongodb_core_lib.py
aml-backend/repositories/: __init__.py
aml-backend/routes/: __init__.py  entities.py  entity_resolution.py  pdf_routes.py  relationships.py  relationships_updated.py  transactions.py
backend/: .env.example  AZURE_FOUNDRY_AGENT_FLOW_DIAGRAM.md  AZURE_FOUNDRY_HIGH_LEVEL_ARCHITECTURE.md  AZURE_FOUNDRY_SOLUTION_ARCHITECTURE.md  AZURE_FOUNDRY_TEST_RESULTS.md  README-RISK-MODEL.md  README.md  RISK_MODEL_MANAGEMENT_IMPLEMENTATION.md  THIRD-PARTY-NOTICES  config.py  debug_agent_step_by_step.py  dependencies.py  logging_setup.py  main.py  observability_test_summary.md  pyproject.toml  test_agent.py  test_agent_conversation_observability.py  test_agent_creation.py  test_agents_api.py  test_embeddings_endpoints.py  test_fraud_detection_agent.py  test_fraud_detection_agent_stream.py  test_memory_system.py  test_observability.py  test_results_comprehensive.md
backend/azure_foundry/: test.md  (+13 more)
(+377 files in other folders)
