[tool.poetry]
name = "aml-kyc-backend"
version = "0.1.0"
description = "AML KYC Backend for ThreatSight360"
authors = ["ThreatSight360 Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
motor = "^3.7.0"
requests = "^2.32.3"
boto3 = "^1.35.0"
botocore = "^1.35.0"
numpy = "<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"