[tool.poetry]
name = "aml-kyc-backend"
version = "0.1.0"
description = "AML KYC Backend for ThreatSight360"
authors = ["ThreatSight360 Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
motor = "^3.7.0"
requests = "^2.32.3"
boto3 = "^1.35.0"
botocore = "^1.35.0"
numpy = "<2.0"
reportlab = "^4.4.3"
langgraph = ">=1.0.7"
langchain-core = ">=1.2.14"
langchain-aws = ">=0.2.9"
langchain-mongodb = ">=0.10.0"
langgraph-checkpoint-mongodb = ">=0.3.1"
voyageai = ">=0.3.2"
websockets = "^16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"